tests/paczka1/small_fuzzy/34260942.err
Error in line 6: ze4AK S66 90,1
Error in line 5: iVfXiDL S57 79,6
Error in line 7: ze4AK S834 38,2
